Added few package via composer ...

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "joshtronic/php-loremipsum": "^2.1"
+        "joshtronic/php-loremipsum": "^2.1",
+        "phpmailer/phpmailer": "^6.8"
     }
 }
