--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "joshtronic/php-loremipsum": "^2.1",
         "phpmailer/phpmailer": "^6.8",
-        "google/recaptcha": "^1.3"
+        "google/recaptcha": "^1.3",
+        "firebase/php-jwt": "^6.10"
     }
 }
